 * Added a render_no_results to render a tr with the correct colspan
    in Paginate::Columns

2006-12-01 tdb
 * Added experimental mapping from OpenURL resolver to OAI-PMH
 * Added BOM and CRLF detection to bin/import
 * Removed BOM and CRLF detection from EndNote
 * Removed user=0 dropping of the user argument
 * Added a confirmation to bin/import if user argument isn't set
 * Added an OAI script to export access logs

2006-12-01 cjg
 * Removed unused #! header from Script.pm
 * Better handling for broken messages so they don't crash the display.
 * Moved when thumbnails are triggered.
 * Made an abort in platform::unix call the abort() method explicitly.
 * Import screen now uses command line script to import.
 * bin/import now has --scripted option which gives machine readable info
    on what has been imported and if it completed ok.
 * Fixed bug that meant that to_string could contain non utf8 data if 
    dirty data was used to create the DOM using XML::DOM

2006-12-02 cjg
 * Shortened "fieldname UNSPECIFIED" to "UNSPECIFED".

2006-12-02 cjg
 * Fixed bug that pagerange was an INT in the database.

2006-12-02 cjg
 * In EPScript = and one_of now do something sensible with multiple fields.

2006-12-03 cjg
 * Fixed a couple of bugs if abstractsearch gets the wrong subscreen or
    a non available export format.
 * Added config to disable plugins and link screens into new lists.

2006-12-03 cjg
 * Removed some stray debug lines introduced in last commit.

2006-12-03 cjg
 * Actions now do POST but screen buttons still do GET
 * Fixed bug with thumbnails on new-version
 * Fixed bug with thumbnails on import
 * Fixed some method="form" oddness.

2006-12-03 cjg
 * Added MIME::Lite module 

2006-12-04 cjg
 * Renamed a css file to lose the "_" in the filename
 * css'd the action list and action bar

2006-12-04 cjg
 * Added missing phrase.

2006-12-04 cjg
 * Fixed issue with repeating background in toolboxes.
 * Upped user history page size to 50 from 5.
